# plasma-settings

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Messages.sh  README.md  active-settings.desktop  org.kde.mobile.plasmasettings.desktop  org.kde.mobile.plasmasettings.json  org.kde.mobile.plasmasettings.metainfo.xml  org.kde.mobile.plasmasettings.svg.license
.reuse/: dep5
categories/: CMakeLists.txt  hidden.desktop  settings-appearance-font.desktop  settings-appearance-themes.desktop  settings-appearance.desktop  settings-applications-defaults.desktop  settings-applications-permissions.desktop  settings-applications.desktop  settings-hardware-display.desktop  settings-hardware-input-pointing-devices.desktop  settings-hardware-input-touchscreen.desktop  settings-hardware-input.desktop  settings-hardware-keyboard.desktop  settings-hardware-multimedia.desktop  settings-hardware-removable-storage.desktop  (+12 more)
import/: CMakeLists.txt  SettingsItem.qml  configgroup.cpp  configgroup.h  package.cpp  package.h  qmldir  settingscomponent.cpp  settingscomponent.h  settingsmodule.cpp  settingsmodule.h  settingsmodulesmodel.cpp  settingsmodulesmodel.h  settingsplugin.cpp  settingsplugin.h
modules/: CMakeLists.txt
modules/about/: CMakeLists.txt  aboutphone.desktop
modules/about/package/: metadata.desktop
modules/accounts/: CMakeLists.txt  accounts.cpp  accounts.h  accountssettings.desktop  kaccounts.desktop
modules/accounts/package/: metadata.desktop
modules/accounts/package/contents/ui/: Accounts.qml  AvailableAccounts.qml  AvailableServices.qml
modules/accounts/plugin/: CMakeLists.txt  google-contacts-plugin.cpp  google-contacts-plugin.h
modules/accounts/plugin/carddav/: CMakeLists.txt  auth.cpp  auth_p.h  carddav-plugin.cpp  carddav-plugin.h  carddav.Contacts.xml  carddav.cpp  carddav.xml  carddav_p.h  carddavclient.cpp  carddavclient.h  replyparser.cpp  replyparser_p.h  requestgenerator.cpp  requestgenerator_p.h  syncer.cpp  syncer_p.h
modules/cellularnetwork/: CMakeLists.txt  Messages.sh  cellularnetwork.cpp  cellularnetwork.desktop  cellularnetwork.h  cellularnetworksettings.cpp  cellularnetworksettings.desktop  cellularnetworksettings.h  cellularnetworksettings.json  mobileproviders.cpp  mobileproviders.h  modem.cpp  modem.h  modemdetails.cpp  modemdetails.h  sim.cpp  sim.h
modules/cellularnetwork/package/: metadata.desktop
modules/cellularnetwork/package/contents/ui/: Contexts.qml  EditContext.qml  EditProfileDialog.qml  MessagesList.qml  Modem.qml  Modems.qml  ProfileList.qml  Registrations.qml  Sim.qml  SimCards.qml  SimLock.qml  SimPage.qml  main.qml
modules/cellularnetwork/package/contents/ui/mobileform/: AbstractFormDelegate.qml  FormButtonDelegate.qml  FormCheckBoxDelegate.qml  FormComboBoxDelegate.qml  FormRadioButtonDelegate.qml  FormSwitchDelegate.qml
modules/configtest/: metadata.desktop
modules/development/: CMakeLists.txt  active_dev_developermode.actions  active_dev_sshd.actions  active_dev_writablefilesystem.actions  developermodehelper.cpp  developermodehelper.h  develsettings.cpp  develsettings.desktop  develsettings.h  develsettingsplugin.cpp  develsettingsplugin.h  integrationhelper.cpp  sshdhelper.cpp  sshdhelper.h  writablefilesystemhelper.cpp  writablefilesystemhelper.h
modules/development/package/: metadata.desktop
modules/development/package/contents/ui/: devel.qml
modules/info/: CMakeLists.txt  distroinfo.cpp  distroinfo.h  hardwareinfo.cpp  hardwareinfo.h  info.cpp  info.desktop  info.h  info.json  softwareinfo.cpp  softwareinfo.h
modules/info/package/: metadata.desktop
modules/info/package/contents/ui/: main.qml
modules/locale/: localesettings.cpp  localesettingsplugin.cpp
modules/locale/package/: metadata.desktop
modules/locale/package/contents/ui/: Locale.qml
modules/password/: CMakeLists.txt  Messages.sh  metadata.json  password.cpp  password.h
modules/password/package/: metadata.desktop
modules/password/package/contents/ui/: Password.qml  main.qml
modules/powermanagement/: CMakeLists.txt  mobilepower.cpp  mobilepower.h  powermanagement.desktop  powermanagement.json
modules/powermanagement/package/: metadata.desktop
modules/powermanagement/package/contents/ui/: BatteryPage.qml  Power.qml  main.qml
modules/theme/: CMakeLists.txt  Messages.sh  themelistmodel.cpp  themelistmodel.h  themesettings.cpp  themesettings.desktop  themesettings.h
modules/theme/package/: metadata.desktop
modules/theme/package/contents/ui/: Theme.qml
modules/time/: CMakeLists.txt  clockconfig_actions.actions  config.h.cmake  timesettings.cpp  timesettings.desktop  timesettings.h  timesettings.json  timezone.cpp  timezone.h  timezonedata.h  timezonemodel.cpp  timezonemodel.h  timezonesi18n.cpp  timezonesi18n.h  timezonesmodel.cpp  timezonesmodel.h
modules/time/package/: metadata.desktop
modules/time/package/contents/ui/: DatePicker.qml  Digit.qml  Time.qml  TimePicker.qml  TimeZonePicker.qml  main.qml
modules/virtualkeyboard/: CMakeLists.txt  gsettingsitem.cpp  gsettingsitem.h  languagemodel.cpp  languagemodel.h  metadata.json  virtualkeyboard.cpp  virtualkeyboard.h
modules/virtualkeyboard/package/: metadata.desktop
modules/virtualkeyboard/package/contents/ui/: WrappingCheckBox.qml  languages.qml  main.qml
modules/web/: metadata.desktop
src/: CMakeLists.txt  main.cpp  menuitem.cpp  menuitem.h  module.cpp  module.h  modulesmodel.cpp  modulesmodel.h  modulesproxymodel.cpp  modulesproxymodel.h  resources.qrc  settingsapp.cpp  settingsapp.h  view.cpp  view.h
src/package/: metadata.desktop  metadata.json
src/package/contents/ui/: DefaultPage.qml  HeaderSearchBar.qml  KCMContainer.qml  ModulesList.qml  ModulesListPage.qml  Sidebar.qml  SidebarButton.qml  main.qml
src/qml/: AboutKDEPage.qml  AboutPage.qml  DefaultPage.qml  HeaderSearchBar.qml  KCMContainer.qml  KCMPageContainer.qml  Main.qml  ModulesListPage.qml  Sidebar.qml  SidebarButton.qml  SidebarCategoriesPage.qml  SidebarDelegate.qml  SidebarSubCategoryPage.qml  main.qml
src/qml/components/: PageContainer.qml  PageHeader.qml  PageStack.qml
(+280 files in other folders)
